url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/login.yaml
- tapOn: "Reportar Problema"
- tapOn: "Selecione..."
- tapOn: "Vazamento"
- tapOn: "Endereço"
- inputText: "Rua Augusta, 1500"
- tapOn: "Descrição"
- inputText: "Vazamento no cruzamento com a Rua Oscar Freire"
- tapOn: "Alta"
- tapOn: "Enviar Chamado"
- assertVisible: ".*registrado com sucesso.*"
