url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/login.yaml
- tapOn: "Meus Chamados"
- assertVisible: ".*Limpar Filtros.*"
- tapOn: "Todos os Status"
- tapOn: "Resolvido"
- assertVisible: "Resolvido"
- tapOn: "Limpar Filtros"
- tapOn: "Buscar por texto..."
- inputText: "Vazamento"
- assertVisible: "Vazamento"
