url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/login.yaml
- tapOn: "Meus Chamados"
- tapOn: "#002"
- assertVisible: "Falta de água"
- assertVisible: "Em Andamento"
- assertVisible: "Av. Brasil, 456"
- tapOn: "Adicionar Observação"
- inputText: "Equipe de manutenção confirmada para hoje."
- tapOn: "Adicionar"
- assertVisible: ".*Observação adicionada com sucesso.*"
- assertVisible: ".*Equipe de manutenção confirmada para hoje.*"
