url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/login.yaml
- tapOn: "Reportar Problema"
- tapOn: "Selecione..."
- tapOn: "Esgoto a céu aberto"
- tapOn: "Endereço"
- inputText: "Rua Consolação, 300"
- tapOn: "Descrição"
- inputText: "Esgoto transbordando na calçada"
- tapOn: "Alta"
- tapOn: "Enviar Chamado"
- assertVisible: ".*registrado com sucesso.*"
- tapOn: "Meus Chamados"
- scrollUntilVisible:
    element: "Esgoto a céu aberto"
    direction: DOWN
- assertVisible: "Esgoto a céu aberto"
- tapOn: "Esgoto a céu aberto"
- assertVisible: "Rua Consolação, 300"
- runFlow:
    file: ../subflows/logout.yaml
