url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- tapOn: "Entrar"
- assertVisible: ".*Campo obrigatório.*"
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/login.yaml
- tapOn: "Reportar Problema"
- tapOn: "Enviar Chamado"
- assertVisible: ".*Campo obrigatório.*"
- tapOn: "Segunda Via"
- tapOn: "Número da Matrícula"
- inputText: "00000"
- tapOn: "Consultar"
- assertVisible: ".*não encontrada.*"
- tapOn: "Meus Chamados"
- tapOn: "Buscar por texto..."
- inputText: "XYZW"
- assertVisible: ".*Nenhum chamado encontrado.*"
