url: https://petri-globals.github.io/semae-presentation
---
- launchApp:
    clearState: true
- tapOn: "Usuário"
- inputText: "admin"
- tapOn: "Senha"
- inputText: "semae123"
- tapOn: "Entrar"
- assertVisible: ".*Bem-vindo.*"
